--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       ]
     }
   </script>
+  <script>
+    if (typeof navigator.serviceWorker !== 'undefined') {
+      navigator.serviceWorker.register('sw.js')
+    }
+  </script>
   <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="https://unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
