--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <script>
     window.$docsify = {
       name: 'RCOS Handbook',
-      repo: 'rcos/rcos-handbook',
+      // repo: 'rcos/rcos-handbook',
       coverpage: true,
       loadSidebar: true,
       loadNavbar: false,
       maxDepth: 2,
       subMaxLevel: 2,
-      basePath: 'https://raw.githubusercontent.com/rcos/rcos-handbook/master/docs',
+      // basePath: 'https://raw.githubusercontent.com/rcos/rcos-handbook/master/docs',
       search : [
         '/',
         '/mentoring/',
